--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
 <div class="navBar">
     <div>
-    <a href="/" rel="noopener noreferrer" class="logo"><img alt="ph_Ui" src="https://staticcdn-prod.peoplehum.com/static_resources/manage-ui/img/ph-logo-white-full.png"></a>
+    <a href="/" rel="noopener noreferrer" class="logo"><img class="imgLogo" alt="ph_Ui" src="https://staticcdn-prod.peoplehum.com/static_resources/manage-ui/img/ph-logo-white-full.png"></a>
     </div>
     <div>
     <table>
