--- a/src/app/home/home-card/home-card.component.css
+++ b/src/app/home/home-card/home-card.component.css
@@ -6,9 +6,9 @@
 .card{
     margin-top: 0px;
     max-height: 320px;
-    min-width: 400px;
-    max-width: 400px;
-    text-align: center;
+    max-width: 100px;
+    min-width: 300px;
+    text-align:center;
     margin-left: 20px;
     box-shadow: 0px 0px 6px 3px black;
     position: relative;
@@ -22,14 +22,16 @@
 .card-body{
     overflow: auto;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    margin-bottom: 0px;
 }
 
 .btn{
     font-size: 10px;
 }
 
-input{
+.inTextNote{
     border-radius: 5px;
+    max-width: 150px;
     box-shadow: 0px 0px 3px 2px black;
     margin-right: 5px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
