--- a/src/app/home/home-card/home-card.component.html
+++ b/src/app/home/home-card/home-card.component.html
@@ -9,8 +9,8 @@
                     Add Notes..!
                 </div>
                 <div class="card-header">
-                    <input type="text" placeholder="enter notes" #task>
-                    <button type="button" class="btn btn-primary" title="AddNotes" (click)="addNotes(task.value)">AddNotes</button>
+                    <input type="text" placeholder="enter notes" #task class="inTextNote">
+                    <button type="button" class="btn btn-primary" title="AddNotes" (click)="addNotes(task.value,task)">AddNotes</button>
                 </div>
                 <div class="card-body">
                     <ul *ngFor="let note of noteCard">
@@ -19,12 +19,12 @@
                     </ul>
                 </div>
             </div>
-            <div style="text-align: center; visibility: hidden;" id="alertDivOfNotes">*EmptyNotes Cannot Be Added!!*</div>
+            <div style="text-align: center; visibility: hidden; margin-top: 0px;" id="alertDivOfNotes">*EmptyNotes Cannot Be Added!!*</div>
         </div>
     </div>
-<div style="display: flex; flex-direction: column; overflow-y: auto; margin-top: 80px;">
-    <div *ngFor="let mve of arOfMves.data">
-        <app-home-single-card [mve]='mve'></app-home-single-card>
+    <div style="display: flex; flex-direction: column; overflow-y: auto; margin-top: 80px;">
+        <div *ngFor="let mve of arOfMves.data">
+            <app-home-single-card [mve]='mve'></app-home-single-card>
+        </div>
     </div>
-</div>
 </div>
