--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,7 @@
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
-<!-- * * * * * * * to get started with your project! * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <div *ngIf="!checkingOn()">
-  <app-login-service></app-login-service>
+    <app-login-service></app-login-service>
 </div>
-<div *ngIf="checkingOn()" class="navBar" >
-<app-nav-bar></app-nav-bar>
+<div *ngIf="checkingOn()">
+  <app-nav-bar></app-nav-bar>
 </div>
 <router-outlet></router-outlet>
