--- a/src/app/home/home-card/home-card.component.html
+++ b/src/app/home/home-card/home-card.component.html
@@ -23,7 +23,7 @@
         </div>
     </div>
     <div style="display: flex; flex-direction: column; overflow-y: auto; margin-top: 80px;">
-        <div *ngFor="let mve of arOfMves.data">
+        <div *ngFor="let mve of comingData">
             <app-home-single-card [mve]='mve'></app-home-single-card>
         </div>
     </div>
