--- a/src/app/search-bar/search-bar-input/search-bar-input.component.html
+++ b/src/app/search-bar/search-bar-input/search-bar-input.component.html
@@ -1,11 +1,12 @@
 <div class="search-box">
     <button title="search" id="searchBox" class="linkers btn-search" (click)="setStyle()"><i class="icon-size bi bi-search"></i></button>
-    <input type="text" class="input-search" placeholder="Search With Movie Name..." (keyup)="myFunction()" id='inText'>
+    <!-- <input type="text" class="input-search" placeholder="Search With Movie Name..." (keyup)="myFunction()" id='inText'> -->
+    <input title="search" class="input-search" placeholder="Search With Movie Name..." type="text" (keyup)="myFun()" id='inText'>
 </div>
 
 <div id="myDropdown" class="dropdown-content">
     <ul *ngFor="let mve of arOfMves.data">
-        <li><a href='/'>{{mve.movieName}}</a></li>
+        <li><a href="/anotherProfile/{{ mve.movieName }}">{{mve.movieName}}</a></li>
     </ul>   
 </div>
 
