--- a/src/app/home/home-card/home-single-card/home-single-card.component.css
+++ b/src/app/home/home-card/home-single-card/home-single-card.component.css
@@ -53,7 +53,7 @@ img{
     border-radius: 5px;
     box-shadow:0px 0px 6px 3px #28364d;
     margin-right: 15px;
-    background: transparent;
+    background: turquoise;
 }
 
 .bi-heart-fill{
