--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -35,8 +35,8 @@
 
 <div *ngIf="!ticket">
     <div >
-        <div  style="margin-top: 100px; position: fixed;">
-            hello
+        <div  style="margin-top: 0px; position: relative; text-align: center; align-items: center;">
+            <app-list-of-movies></app-list-of-movies>
         </div>
     </div>
 
